[metadata]
name = amqstompclient
version = 1.2.0
authors = "snuids"
authors_email="snuids@mannekentech.com"
description = "Active MQ Python Client Using Stomp"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
keywords = ['ActiveMQ', 'stomp', 'client'] # arbitrary keywords
description_file = README.md
url = "https://github.com/snuids/amqstompclient"

[options]
packages = find:
install_requires =
    stomp.py